Added video content and text description

--- a/src/article.html
+++ b/src/article.html
@@ -122,7 +122,7 @@
             <h1 class="text-primary text-center mb-4" id="article">Global temperature record shows 2016 as the warmest year on record</h1>
             <div class="text-center wrapper">
                 <figure class="figure mb-4">
-                    <img src="./img/temperature.jpg" class="figure-img img-fluid" alt="Graphic of global mean temperature change from since 1880.">
+                    <img src="./img/temperature.jpg" class="figure-img img-fluid" alt="">
                     <figcaption class="figure-caption text-center px-5">The graphic shows the global mean surface temperature change since 1880 till nowadays. The grey curve
                         indicates the annual average temperature and the black curve shows the smoothed result. Over the
                         last two centuries, the mean tempurature has increased by around 1 degree Celcius.</figcaption>
@@ -134,7 +134,7 @@
             </p>
             <p>Sixteen of the 17 warmest years in the 136-year record all have occurred since 2001, with the exception of 1998.
                 The year 2016 ranks as the warmest on record.</p>
-            <div class="table-responsive mt-4 wrapper">
+            <div class="table-responsive my-4 wrapper">
                 <table class="table text-center">
                     <caption class="text-center px-5">Samples of global mean surface temperature change since 1880.
                         <span class="sr-only">Column one indicates the century. Column two contains the year. Column three shows the annual average
@@ -194,6 +194,15 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+            <div class="text-center wrapper">
+                <figure class="figure mb-4">
+                    <video class="figure-img px-md-4 img-fluid" controls>
+                        <source src="./img/forest.mp4" type="video/mp4">
+                        <source src="./img/forest.webm" type="video/webm">
+                        <track kind="descriptions" src="./img/descriptions.vtt" srclang="en" label="English">
+                    </video>
+                </figure>
             </div>
         </article>
     </main>
