--- a/src/article.html
+++ b/src/article.html
@@ -121,7 +121,7 @@
         <article class="p-5 bg-white" aria-labelledby="article">
             <h1 class="text-primary text-center mb-4" id="article">Global temperature record shows 2016 as the warmest year on record</h1>
             <div class="text-center wrapper video">
-                <figure class="figure mb-4 p-2" id="video-container">
+                <div class="p-1 video-container" id="video-container">
                     <video class="figure-img img-fluid" id="video-player" poster="./video/forest.jpg" preload="metadata" controls>
                         <source src="./video/forest.mp4" type="video/mp4">
                         <source src="./video/forest.webm" type="video/webm">
@@ -131,19 +131,20 @@
                         <track kind="subtitles" src="./video/descriptions.vtt" srclang="en" label="English" default>
                     </video>
                     <ul class="list-unstyled mb-1 d-flex flex-row d-none" id="video-controls">
+                        <li class="mx-1 sr-only">
+                            <button class="btn btn-sm btn-primary" id="video-skip-ahead" type="button" aria-label="Skip ahead 30 seconds">Skip Ahead</button>
+                        </li>
                         <li>
                             <button class="btn btn-sm btn-primary" id="video-play" type="button">Play</button>
                         </li>
-                        <li class="w-100 mx-1">
-                            <div class="progress" id="video-progress">
-                                <div class="progress-bar" id="video-progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" aria-label="Progress"></div>
-                            </div>
-                        </li>
-                        <li class="mx-1 sr-only">
-                            <button class="btn btn-sm btn-primary" id="video-skip-ahead" type="button" aria-label="Skip ahead 10 seconds">Skip Ahead</button>
-                        </li>
                         <li class="mx-1 sr-only">
                             <button class="btn btn-sm btn-primary" id="video-go-back" type="button" aria-label="Go back 10 seconds">Go back</button>
+                        </li>
+                        <li class="w-100 mx-1">
+                            <div class="progress" id="video-progress">
+                                <div class="progress-bar" id="video-progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
+                                    aria-label="Progress"></div>
+                            </div>
                         </li>
                         <li class="mx-1">
                             <input class="video-volume" type="range" id="video-volume" min="0" max="10" value="8" aria-label="Volume">
@@ -158,11 +159,10 @@
                             <button class="btn btn-sm btn-primary" id="video-fullscreen" type="button" aria-label="Fullscreen">Fullscreen</button>
                         </li>
                     </ul>
-
-                    <figcaption>&copy;
-                        <a href="https://www.rainforest-alliance.org/">Rainforest Alliance</a>
-                    </figcaption>
-                </figure>
+                </div>
+                <p>&copy;
+                    <a href="https://www.rainforest-alliance.org/">Rainforest Alliance</a>
+                </p>
             </div>
             <p>The global temperature record shows the fluctuations of the temperature of the atmosphere and the oceans through
                 various spans of time. The recently data published by NASA is one of the most detailed information exists
