--- a/src/article.html
+++ b/src/article.html
@@ -135,7 +135,7 @@
                             <button class="btn btn-sm btn-primary" id="video-skip-ahead" type="button" aria-label="Skip ahead 30 seconds">Skip Ahead</button>
                         </li>
                         <li>
-                            <button class="btn btn-sm btn-primary" id="video-play" type="button">Play</button>
+                            <button class="btn btn-sm btn-primary" id="video-play" type="button" aria-label="Play">Play</button>
                         </li>
                         <li class="mx-1 sr-only">
                             <button class="btn btn-sm btn-primary" id="video-go-back" type="button" aria-label="Go back 10 seconds">Go back</button>
